# makefile

./: README.md
Cmake-master/: CMakeLists.txt
Cmake-master/src/: hw_power.c
